Login Popup Full Functionality
After struggling for far too long trying to use proper methods and using AJAX/jQuery, I gave up and decided to go with a much more basic method. Sure, it is kinda janky, but at least I can understand it and it works.

--- a/php/php.ini
+++ b/php/php.ini
@@ -1002,9 +1002,12 @@ pdo_mysql.default_socket=
 [mail function]
 ; For Win32 only.
 ; http://php.net/smtp
-SMTP = localhost
+SMTP = smtp-mail.outlook.com
 ; http://php.net/smtp-port
-smtp_port = 25
+smtp_port = 587
+
+auth_username = ecbtest19039@outlook.com
+auth_password = Toastmasters
 
 ; For Win32 only.
 ; http://php.net/sendmail-from
